# TelegramCountdownBot

./: .env  .env.example  README.md  TODO.md  main.py  pyproject.toml
bot/: main.py  requirements.txt
flask/: flask_app.py
