[project]
name = "CountdownBot"
version = "0.1.0"
description = "A simple bot showing time and showing countdowns in chats"
readme = "README.md"
requires-python = ">=3.13"
authors = [
  {name = "Parsa Mahmoodi", email = "parsa.mahmoodi81@gmail.com" }
]
license = "GPL-3.0-only"
License-File= "LICENSE"
dependencies = [
    "python-dotenv>=1.2.1",
    "python-telegram-bot>=22.5",
]
